--- a/index.html
+++ b/index.html
@@ -10,18 +10,16 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
-  <script src="script.js"></script>
 
 <body>
   <div>
-    <h1 style=" padding-left: 40px; background-color: brown; font-size:xx-large; margin: 0%;"><i class="fa-solid fa-cloud-sun-rain" style="color: #f6a504; margin-left: 10px;"></i><b>WeatherPedia</b></h1>
+    <h1 style=" padding-left: 40px; background-color: brown; font-size:xx-large; margin: 0%;"><i
+        class="fa-solid fa-cloud-sun-rain" style="color: #f6a504; margin-left: 10px;"></i><b>WeatherPedia</b></h1>
   </div>
-  <nav class="navbar navbar-expand-sm bg-warning navbar-dark" style="padding-left: 40px;" >
+  <nav class="navbar navbar-expand-sm bg-warning navbar-dark" style="padding-left: 40px;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><i class="fa-solid fa-bars fa-sm" style="font-weight: bold; padding-right: 5px;"></i>Home</a>
+      <a class="navbar-brand" href="#"><i class="fa-solid fa-bars fa-sm"
+          style="font-weight: bold; padding-right: 5px;"></i>Home</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -50,8 +48,8 @@
           </li>
         </ul>
         <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" id="city" placeholder="Enter Country" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit" id="submit">Search</button>
+          <input class="form-control me-2" type="search" id="cityName" placeholder="Enter Country" aria-label="Search">
+          <button class="btn btn-outline-success" type="button" id="searchBtn">Search</button>
         </form>
       </div>
     </div>
@@ -66,7 +64,8 @@
     <div class="card border-primary mb-3" style="width: 14rem;height: 18rem; margin-right: 20px;">
       <div class="card-header">Climate Details</div>
       <div class="card-body text-primary">
-        <i class="fa-solid fa-cloud-showers-heavy fa-sm" style="color: #9dbffb;font-size:50px; padding-top: 40px; padding-left: 40%;"></i>
+        <i class="fa-solid fa-cloud-showers-heavy fa-sm"
+          style="color: #9dbffb;font-size:50px; padding-top: 40px; padding-left: 40%;"></i>
         <ul class="list-unstyled mt-3 mb-4">
           <li>Clouds: <span id="cloud_pct"></span></li>
           <li>Feels-like: <span id="feels_like"></span></li>
@@ -77,8 +76,7 @@
     <div class="card border-secondary mb-2" style=" width: 14rem; margin-right: 20px;">
       <div class="card-header">Temperature Details</div>
       <div class="card-body text-secondary">
-        <i class="fa-solid fa-temperature-high fa-sm"
-        style="font-size:50px; padding-top: 40px; padding-left: 40%;"></i>
+        <i class="fa-solid fa-temperature-high fa-sm" style="font-size:50px; padding-top: 40px; padding-left: 40%;"></i>
         <ul class="list-unstyled mt-3 mb-4">
           <li>Temperature :<span id="temp"></span></li>
           <li>Max Temperature :<span id="max_temp"></span></li>
@@ -89,7 +87,8 @@
     <div class="card border-success mb-3" style="width: 14rem;">
       <div class="card-header">Wind Details</div>
       <div class="card-body text-success">
-        <i class="fa-solid fa-wind fa-sm" style="color: #8af4ed;font-size:50px; padding-top: 40px; padding-left: 40%;"></i>
+        <i class="fa-solid fa-wind fa-sm"
+          style="color: #8af4ed;font-size:50px; padding-top: 40px; padding-left: 40%;"></i>
         <ul class="list-unstyled mt-3 mb-4">
           <li>Sunrise: <span id="sunrise"></span></li>
           <li>wind degree: <span id="wind_degrees"></span></li>
@@ -219,6 +218,11 @@
       <p>© Copyright 2013-2023 www.WeatherPedia.com. All rights reserved. Developed by WeatherPedia.</p>
     </div>
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
