--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
 
-<body>
+<body style="background-color: antiquewhite; font-family: 'Poppins',sans-serif;">
   <div>
     <h1 style=" padding-left: 40px; background-color: brown; font-size:xx-large; margin: 0%;"><i
         class="fa-solid fa-cloud-sun-rain" style="color: #f6a504; margin-left: 10px;"></i><b>WeatherPedia</b></h1>
