--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body style="background-color: antiquewhite; font-family: 'Poppins',sans-serif;">
   <div>
-    <h1 style=" padding-left: 40px; background-color: brown; font-size:xx-large; margin: 0%;"><i
+    <h1 style=" padding-left: 40px; background-color: brown; font-size:x-large; margin: 0%;"><i
         class="fa-solid fa-cloud-sun-rain" style="color: #f6a504; margin-left: 10px;"></i><b>WeatherPedia</b></h1>
   </div>
   <nav class="navbar navbar-expand-sm bg-warning navbar-dark" style="padding-left: 40px;">
@@ -212,8 +212,8 @@
       <h3>Contact</h3>
       <p>Address: G-13, 2nd Floor, Sec-3</p>
       <p>Noida, UP, 201301, India</p>
-      <p>Contact No: 0120-4256464, 9990449935</p><a href="https://www.javatpoint.com/contact-us">Contact Us</a>
-      <a href="https://www.javatpoint.com/sonoo-jaiswal">About Me</a>
+      <p>Contact No: 0120-4256464, 9990449935</p><a href="/">Contact Us</a>
+      <a href="/">About Me</a>
     </div>
   </footer>
   <footer class="footer2" style="background-color: brown;">
