--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body style="background-color: antiquewhite; font-family: 'Poppins',sans-serif;">
   <div>
-    <h1 style=" padding-left: 40px; background-color: brown; font-size:x-large; margin: 0%;"><i
+    <h1 style=" padding-left: 40px; padding-top:6px; height:40px; background-color: brown; font-size:x-large; margin: 0%;"><i
         class="fa-solid fa-cloud-sun-rain" style="color: #f6a504; margin-left: 10px;"></i><b>WeatherPedia</b></h1>
   </div>
   <nav class="navbar navbar-expand-sm bg-warning navbar-dark" style="padding-left: 40px;">
