--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+  <style>
+    @media screen and (max-width: 1280px) {
+    body{
+        min-width: fit-content;
+    }
+  }
+  </style>
 
 <body style="background-color: antiquewhite; font-family: 'Poppins',sans-serif;">
   <div>
